--- a/services.html
+++ b/services.html
@@ -45,7 +45,7 @@
             <img src="images/Assistant-Viruel.webp" alt="Services d'assistance virtuelle en comptabilité" class="responsive-img" width="800" height="600" itemprop="image"> 
             <h2>Ce Que Je Propose pour comptable:</h2>
             <ul> 
-                <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> <h3>Tenue de livre</h3> - Une gestion précise et fiable de vos livres comptables, assurant une transparence totale de vos finances.</li>
+                <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> <h3>Tenue de livre</h3> - <h4>Une gestion précise et fiable de vos livres comptables, assurant une transparence totale de vos finances.</h4></li>
                 <li><img src="images/bank-reconciliation-icon.webp" alt="Icône Rapprochement bancaire"> <h3>Rapprochement bancaire</h3> - Nous vérifions la concordance entre vos relevés bancaires et vos registres comptables pour éviter toute anomalie.</li> 
                 <li><img src="images/pre-accounting-icon.webp" alt="Icône Pré-comptabilité"> <h3>Pré-comptabilité</h3> - Préparation initiale et organisation des documents comptables afin de simplifier les tâches de fin de mois et les audits.</li> 
                 <li><img src="images/accounting-icon.webp" alt="Icône Préparation des écritures comptables"> <h3>Préparation des écritures comptables</h3> - Saisie et comptabilisation des transactions financières en temps réel pour une gestion efficace.</li> 
