--- a/services.html
+++ b/services.html
@@ -45,14 +45,14 @@
             <img src="images/Assistant-Viruel.webp" alt="Services d'assistance virtuelle en comptabilité" class="responsive-img" width="800" height="600" itemprop="image"> 
             <h2>Ce Que Je Propose pour comptable:</h2>
             <ul> 
-                <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> <h3>Tenue de livre</h3> - <h4>Une gestion précise et fiable de vos livres comptables, assurant une transparence totale de vos finances.</h4></li>
-                <li><img src="images/bank-reconciliation-icon.webp" alt="Icône Rapprochement bancaire"> <h3>Rapprochement bancaire</h3> - Nous vérifions la concordance entre vos relevés bancaires et vos registres comptables pour éviter toute anomalie.</li> 
-                <li><img src="images/pre-accounting-icon.webp" alt="Icône Pré-comptabilité"> <h3>Pré-comptabilité</h3> - Préparation initiale et organisation des documents comptables afin de simplifier les tâches de fin de mois et les audits.</li> 
-                <li><img src="images/accounting-icon.webp" alt="Icône Préparation des écritures comptables"> <h3>Préparation des écritures comptables</h3> - Saisie et comptabilisation des transactions financières en temps réel pour une gestion efficace.</li> 
-                <li><img src="images/accounting-icon.webp" alt="Icône Comptabilisation des écritures comptables"> <h3>Comptabilisation des écritures comptables</h3> - Enregistrement détaillé des transactions pour un suivi précis.</li> 
-                <li><img src="images/client-management-icon.webp" alt="Icône Suivis comptes clients"> <h3>Suivis comptes clients</h3> - Gestion des créances clients pour optimiser vos flux de trésorerie.</li> 
-                <li><img src="images/supplier-management-icon.webp" alt="Icône Suivis comptes fournisseurs"> <h3>Suivis comptes fournisseurs</h3> - Maintien des relations avec vos fournisseurs et gestion des paiements pour garantir une collaboration fluide.</li> 
-                <li><img src="images/payment-icon.webp" alt="Icône Paiements clients, fournisseurs, salaires"> <h3>Paiements clients, fournisseurs, salaires</h3> - Gestion des paiements réguliers et ponctuels pour assurer la stabilité financière de votre entreprise.</li> 
+                <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> <h3>Tenue de livre</h3> <h4>- Une gestion précise et fiable de vos livres comptables, assurant une transparence totale de vos finances.</h4></li>
+                <li><img src="images/bank-reconciliation-icon.webp" alt="Icône Rapprochement bancaire"> <h3>Rapprochement bancaire</h3> <h4>- Nous vérifions la concordance entre vos relevés bancaires et vos registres comptables pour éviter toute anomalie.</h4></li> 
+                <li><img src="images/pre-accounting-icon.webp" alt="Icône Pré-comptabilité"> <h3>Pré-comptabilité</h3> <h4>- Préparation initiale et organisation des documents comptables afin de simplifier les tâches de fin de mois et les audits.</h4></li> 
+                <li><img src="images/accounting-icon.webp" alt="Icône Préparation des écritures comptables"> <h3>Préparation des écritures comptables</h3> <h4>- Saisie et comptabilisation des transactions financières en temps réel pour une gestion efficace.</h4></li> 
+                <li><img src="images/accounting-icon.webp" alt="Icône Comptabilisation des écritures comptables"> <h3>Comptabilisation des écritures comptables</h3> <h4>- Enregistrement détaillé des transactions pour un suivi précis.</h4></li> 
+                <li><img src="images/client-management-icon.webp" alt="Icône Suivis comptes clients"> <h3>Suivis comptes clients</h3> <h4>- Gestion des créances clients pour optimiser vos flux de trésorerie.</li> 
+                <li><img src="images/supplier-management-icon.webp" alt="Icône Suivis comptes fournisseurs"> <h3>Suivis comptes fournisseurs</h3> <h4>- Maintien des relations avec vos fournisseurs et gestion des paiements pour garantir une collaboration fluide.</h4></li> 
+                <li><img src="images/payment-icon.webp" alt="Icône Paiements clients, fournisseurs, salaires"> <h3>Paiements clients, fournisseurs, salaires</h3> <h4>- Gestion des paiements réguliers et ponctuels pour assurer la stabilité financière de votre entreprise.</h4></li> 
             </ul>
         </section>
         <section>
