--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
     </header>
     <main>
         <section>
-            <img src="images/Assistant-Viruel.webp" alt="Services d'assistance virtuelle en comptabilité" class="responsive-img" width="800" height="600" itemprop="image"> 
+            <img src="images/Assistant-Virtuel.webp" alt="Services d'assistance virtuelle en comptabilité" class="responsive-img" width="800" height="600" itemprop="image"> 
             <h2>Ce Que Je Propose pour comptable:</h2>
             <ul> 
                 <li><img src="images/bookkeeping-icon.webp" alt="Icône Tenue de livre"> <h3>Tenue de livre</h3> <h4>- Une gestion précise et fiable de vos livres comptables, assurant une transparence totale de vos finances.</h4></li>
