--- a/services.html
+++ b/services.html
@@ -71,11 +71,18 @@
             <h2>Contactez-Nous</h2>
             <p>Contactez-nous dès aujourd'hui pour découvrir comment nos services d'<strong>assistance virtuelle en comptabilité</strong> peuvent vous aider. <a href="contact.html" class="cta-button">Nous contacter</a></p>
         </section>
-        <section class="temoignages"> 
-            <h2>Témoignages</h2> 
-            <blockquote>"Service exceptionnel, très professionnel !" - Client satisfait</blockquote>
-            <blockquote>"Une aide précieuse pour notre comptabilité. Hautement recommandé !" - Un autre client satisfait</blockquote>
-        </section>
+        <section class="temoignages">
+    <h2>Témoignages</h2>
+    <blockquote>
+        "Service exceptionnel, très professionnel !"
+        <cite>- Client satisfait</cite>
+    </blockquote>
+    <blockquote>
+        "Une aide précieuse pour notre comptabilité. Hautement recommandé !"
+        <cite>- Un autre client satisfait</cite>
+    </blockquote>
+</section>
+
     </main>
     <footer>
         <p>&copy; 2024 Mon Assistant Virtuel. Tous droits réservés.</p>
