--- a/index.html
+++ b/index.html
@@ -90,11 +90,18 @@
             </div>
             <p>Ma mission est de simplifier la gestion financière des entreprises en fournissant des services de <strong>comptabilité</strong> et administratifs à distance de haute qualité. Je m'efforce d'apporter une expertise professionnelle et un service personnalisé à chaque projet.</p>
         </section>
-        <section class="temoignages"> 
-            <h2>Témoignages</h2> 
-            <blockquote>"Service exceptionnel, très professionnel !" - Client satisfait</blockquote>
-            <blockquote>"Une aide précieuse pour notre comptabilité. Hautement recommandé !" - Un autre client satisfait</blockquote>
-        </section>
+        <section class="temoignages">
+    <h2>Témoignages</h2>
+    <blockquote>
+        "Service exceptionnel, très professionnel !"
+        <cite>- Client satisfait</cite>
+    </blockquote>
+    <blockquote>
+        "Une aide précieuse pour notre comptabilité. Hautement recommandé !"
+        <cite>- Un autre client satisfait</cite>
+    </blockquote>
+</section>
+
         <section>
             <h2>Contactez-Nous</h2>
             <p>Contactez-nous dès aujourd'hui pour découvrir comment nous pouvons simplifier la gestion financière de votre entreprise. <a href="contact.html">Nous contacter</a></p>
